--- a/leaves.cabal
+++ b/leaves.cabal
@@ -15,12 +15,14 @@ executable leaves
   ghc-options:         -O2 -Wall -threaded -rtsopts -with-rtsopts=-N
   default-language:    Haskell2010
   build-depends:       base >=4.7 && <4.8,
-                       bytestring,
                        async,
+                       bytestring,
+                       hashable,
                        posix-paths,
                        regex-tdfa,
                        vector,
-                       vector-algorithms
+                       vector-algorithms,
+                       unordered-containers
 
 source-repository head
   type:     git
