Add render for tree; improve .gitignore matches

--- a/leaves.cabal
+++ b/leaves.cabal
@@ -20,6 +20,7 @@ executable leaves
                        hashable,
                        posix-paths,
                        regex-tdfa,
+                       text,
                        vector,
                        vector-algorithms,
                        unordered-containers
