--- a/leaves.cabal
+++ b/leaves.cabal
@@ -13,6 +13,7 @@ executable leaves
   main-is:             Main.hs
   hs-source-dirs:      src
   ghc-options:         -O2 -Wall -threaded -rtsopts -with-rtsopts=-N
+  ghc-prof-options:    -fprof-auto
   default-language:    Haskell2010
   build-depends:       base >=4.7 && <4.8,
                        async,
