--- a/leaves.cabal
+++ b/leaves.cabal
@@ -12,12 +12,13 @@ cabal-version:       >=1.10
 executable leaves
   main-is:             Main.hs
   hs-source-dirs:      src
-  ghc-options:         -O2 -Wall -threaded -rtsopts -with-rtsopts=-N
+  ghc-options:         -O2 -Wall -Werror -threaded -rtsopts -with-rtsopts=-N
   ghc-prof-options:    -fprof-auto
   default-language:    Haskell2010
   build-depends:       base >=4.7 && <4.8,
                        async,
                        bytestring,
+                       directory,
                        hashable,
                        posix-paths,
                        regex-tdfa,
