Convert manual state threading to use State monad

--- a/leaves.cabal
+++ b/leaves.cabal
@@ -20,6 +20,7 @@ executable leaves
                        bytestring,
                        directory,
                        hashable,
+                       mtl,
                        posix-paths,
                        regex-tdfa,
                        text,
